Add Github model that pulls in API response and passes filtered list of repos back to controller

--- a/app/views/github_profile/ask.html.erb
+++ b/app/views/github_profile/ask.html.erb
@@ -2,7 +2,7 @@
   <h3>Enter the GitHub username you're interested in</h3>
 
   <%= form_tag github_profile_show_path do %>
-    <p><%= text_field_tag :username %></p>
-    <p><%= button_tag "Get repository list" %></p>
+    <%= text_field_tag :username %>
+    <%= button_tag "Get repository list" %>
   <% end %>
 </div>
