--- a/app/assets/stylesheets/github_profile.scss
+++ b/app/assets/stylesheets/github_profile.scss
@@ -4,28 +4,65 @@
 
 .ask {
   margin: 80px;
-  background-color: #EEE;
-  padding: 50px;
+  background-color: #f1f6fb;
+  border: solid 1px #d0e5f8;
+  padding-top: 30px;
+  padding-bottom: 50px;
   border-radius: 10px;
   text-align: center
 }
 
 h3 {
-  font-family: Helvetica;
+  font: 25px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 input {
   width: 500px;
   height: 30px;
+  padding: 7px 8px;
+  font-size: 13px;
+  color: #333;
+  vertical-align: middle;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  outline: none;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+  margin-right: 10px;
 }
 
+// button {
+//   height: 40px;
+//   width: 500px;
+//   font-family: Helvetica;
+//   font-size: 15px;
+//   color: white;
+//   background-color: green;
+//   border-radius: 5px;
+//   border-style: none;
+// }
+
 button {
-  height: 40px;
-  width: 500px;
-  font-family: Helvetica;
-  font-size: 15px;
-  color: white;
-  background-color: green;
-  border-radius: 5px;
-  border-style: none;
-}
+    position: relative;
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 13px;
+    font-weight: bold;
+    line-height: 30px;
+    color: #333;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    background-color: #eee;
+    background-image: -webkit-linear-gradient(#fcfcfc, #eee);
+    background-image: linear-gradient(#fcfcfc, #eee);
+    border: 1px solid #d5d5d5;
+    border-radius: 3px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-appearance: none;
+  }
