--- a/app/views/github_profile/show.html.erb
+++ b/app/views/github_profile/show.html.erb
@@ -1,5 +1,3 @@
-<%= @repository_list %>
-
 <!DOCTYPE html>
 <html lang="en" class=" is-copy-enabled is-u2f-enabled">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# object: http://ogp.me/ns/object# article: http://ogp.me/ns/article# profile: http://ogp.me/ns/profile#">
@@ -355,32 +353,30 @@
 
     <ul class="repo-list js-repo-list" data-filterable-for="your-repos-filter" data-filterable-type="substring">
 
+<% @repository_list.each do |r| %>
 
   <div class="repo-list-item public source" itemprop="owns" itemscope itemtype="http://schema.org/Code">
     <div class="repo-list-stats">
         <span itemprop="programmingLanguage">
-          Ruby
+          <%= r[:language] %>
         </span>
       <a class="repo-list-stat-item tooltipped tooltipped-s" href="/anjanamohanty/voting_api/stargazers" aria-label="Stargazers">
         <svg aria-hidden="true" class="octicon octicon-star" height="16" role="img" version="1.1" viewBox="0 0 14 16" width="14"><path d="M14 6l-4.9-0.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14l4.33-2.33 4.33 2.33L10.4 9.26 14 6z"></path></svg>
-        0
+        <%= r[:stargazers] %>
       </a>
       <a class="repo-list-stat-item tooltipped tooltipped-s" href="/anjanamohanty/voting_api/network"  aria-label="Forks">
         <svg aria-hidden="true" class="octicon octicon-git-branch" height="16" role="img" version="1.1" viewBox="0 0 10 16" width="10"><path d="M10 5c0-1.11-0.89-2-2-2s-2 0.89-2 2c0 0.73 0.41 1.38 1 1.72v0.3c-0.02 0.52-0.23 0.98-0.63 1.38s-0.86 0.61-1.38 0.63c-0.83 0.02-1.48 0.16-2 0.45V4.72c0.59-0.34 1-0.98 1-1.72 0-1.11-0.89-2-2-2S0 1.89 0 3c0 0.73 0.41 1.38 1 1.72v6.56C0.41 11.63 0 12.27 0 13c0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.53-0.2-1-0.53-1.36 0.09-0.06 0.48-0.41 0.59-0.47 0.25-0.11 0.56-0.17 0.94-0.17 1.05-0.05 1.95-0.45 2.75-1.25s1.2-1.98 1.25-3.02h-0.02c0.61-0.36 1.02-1 1.02-1.73zM2 1.8c0.66 0 1.2 0.55 1.2 1.2s-0.55 1.2-1.2 1.2-1.2-0.55-1.2-1.2 0.55-1.2 1.2-1.2z m0 12.41c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z m6-8c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z"></path></svg>
-        0
+        <%= r[:forks] %>
       </a>
     </div>
 
     <h3 class="repo-list-name">
       <a href="/anjanamohanty/voting_api" itemprop="name codeRepository">
-        voting_api</a>
+        <%= r[:name] %></a>
     </h3>
 
-
-
-
     <p class="repo-list-meta">
-        Updated <time datetime="2016-02-25T05:10:22Z" is="relative-time">Feb 25, 2016</time>
+        Updated <time datetime="<%=r[:updated_at]%>" is="relative-time"><%=r[:updated_at]%></time>
     </p>
 
     <div class="participation-graph">
@@ -388,42 +384,7 @@
     </div>
   </div>
 
-
-  <div class="repo-list-item public fork" itemprop="owns" itemscope itemtype="http://schema.org/Code">
-    <div class="repo-list-stats">
-        <span itemprop="programmingLanguage">
-          Ruby
-        </span>
-      <a class="repo-list-stat-item tooltipped tooltipped-s" href="/anjanamohanty/employee_reviews_with_a_database/stargazers" aria-label="Stargazers">
-        <svg aria-hidden="true" class="octicon octicon-star" height="16" role="img" version="1.1" viewBox="0 0 14 16" width="14"><path d="M14 6l-4.9-0.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14l4.33-2.33 4.33 2.33L10.4 9.26 14 6z"></path></svg>
-        0
-      </a>
-      <a class="repo-list-stat-item tooltipped tooltipped-s" href="/anjanamohanty/employee_reviews_with_a_database/network"  aria-label="Forks">
-        <svg aria-hidden="true" class="octicon octicon-git-branch" height="16" role="img" version="1.1" viewBox="0 0 10 16" width="10"><path d="M10 5c0-1.11-0.89-2-2-2s-2 0.89-2 2c0 0.73 0.41 1.38 1 1.72v0.3c-0.02 0.52-0.23 0.98-0.63 1.38s-0.86 0.61-1.38 0.63c-0.83 0.02-1.48 0.16-2 0.45V4.72c0.59-0.34 1-0.98 1-1.72 0-1.11-0.89-2-2-2S0 1.89 0 3c0 0.73 0.41 1.38 1 1.72v6.56C0.41 11.63 0 12.27 0 13c0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.53-0.2-1-0.53-1.36 0.09-0.06 0.48-0.41 0.59-0.47 0.25-0.11 0.56-0.17 0.94-0.17 1.05-0.05 1.95-0.45 2.75-1.25s1.2-1.98 1.25-3.02h-0.02c0.61-0.36 1.02-1 1.02-1.73zM2 1.8c0.66 0 1.2 0.55 1.2 1.2s-0.55 1.2-1.2 1.2-1.2-0.55-1.2-1.2 0.55-1.2 1.2-1.2z m0 12.41c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z m6-8c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z"></path></svg>
-        6
-      </a>
-    </div>
-
-    <h3 class="repo-list-name">
-      <a href="/anjanamohanty/employee_reviews_with_a_database" itemprop="name codeRepository">
-        employee_reviews_with_a_database</a>
-    </h3>
-
-      <p class="repo-list-info">
-        <svg aria-hidden="true" class="octicon octicon-repo-forked" height="16" role="img" version="1.1" viewBox="0 0 10 16" width="10"><path d="M8 1c-1.11 0-2 0.89-2 2 0 0.73 0.41 1.38 1 1.72v1.28L5 8 3 6v-1.28c0.59-0.34 1-0.98 1-1.72 0-1.11-0.89-2-2-2S0 1.89 0 3c0 0.73 0.41 1.38 1 1.72v1.78l3 3v1.78c-0.59 0.34-1 0.98-1 1.72 0 1.11 0.89 2 2 2s2-0.89 2-2c0-0.73-0.41-1.38-1-1.72V9.5l3-3V4.72c0.59-0.34 1-0.98 1-1.72 0-1.11-0.89-2-2-2zM2 4.2c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z m3 10c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z m3-10c-0.66 0-1.2-0.55-1.2-1.2s0.55-1.2 1.2-1.2 1.2 0.55 1.2 1.2-0.55 1.2-1.2 1.2z"></path></svg>
-        forked from <a href="/tiyd-rails-2016-01/employee_reviews_solution">tiyd-rails-2016-01/employee_reviews_solution</a>
-      </p>
-
-
-
-    <p class="repo-list-meta">
-        Updated <time datetime="2016-02-18T03:20:40Z" is="relative-time">Feb 18, 2016</time>
-    </p>
-
-    <div class="participation-graph">
-      <poll-include-fragment src="/anjanamohanty/employee_reviews_with_a_database/graphs/participation?h=100&amp;w=640"></poll-include-fragment>
-    </div>
-  </div>
+<% end %>
 
 </ul>
 
